--- a/landing/templates/landing/landing_page.html
+++ b/landing/templates/landing/landing_page.html
@@ -87,7 +87,7 @@
         <div class="col-md-3">
             <!-- Cart icon -->
             <div class="mb-4">
-                <a href="#" class="text-decoration-none">
+                <a href="{% url 'view_cart'%}" class="text-decoration-none">
                     <i class="bi bi-cart"></i> My Cart
                 </a>
             </div>
@@ -112,7 +112,7 @@
             </div>
         </div>
     
-
+        {% comment %} Displaying Products {% endcomment %}
         <div class="container">
             <!-- Loop through categories -->
             {% for category, products in category_products.items %}
@@ -129,8 +129,14 @@
                                     <p class="card-text">Price: Ksh {{ product.price }}</p>
                                     <div class="d-flex justify-content-between mt-auto">
                                         <a href="#" class="btn btn-primary">Buy Now</a>
-                                        <a href="#" class="btn btn-secondary">Add to Cart</a>
-                                    </div>                                </div>
+                                        
+                                        <form method="post" action="{% url 'add_to_cart' product.id %}">
+                                            {% csrf_token %}
+                                            <button type="submit" class="btn btn-secondary">Add to Cart</button>
+                                        </form>
+                                        
+                                    </div>                                
+                                </div>
                             </div>
                         </div>
                     {% empty %}
